fix spacing in tabs

--- a/src/frontend/web_application/src/layouts/Page2/components/Tab/style.scss
+++ b/src/frontend/web_application/src/layouts/Page2/components/Tab/style.scss
@@ -1,6 +1,6 @@
 .tab {
   border-top: 2px solid grey;
-  margin-left: 4px;
+  margin-left: 2px;
   margin-right: 0;
 
   &:first-of-type {
